# CaffeBean

./: .gitignore  CMakeLists.txt  README.md  main.cpp
CaffeBean/include/: bean.h  common.h  config.h  dataset.h  init.h  io.h  layer.h  layer_factory.h  math_function.h  net.h  random_init.h  solver.h
CaffeBean/include/layers/: accuracy_layer.h  conv_layer.h  fully_connected_layer.h  input_layer.h  l1loss_layer.h  pooling_layer.h  relu_layer.h  reshape.layer.h  softmax_loss_layer.h  test_layer.h
CaffeBean/src/: bean.cpp  config.cpp  dataset.cpp  layer.cpp  layer_factory.cpp  net.cpp  solver.cpp
CaffeBean/src/layers/: accuracy_layer.cpp  conv_layer.cpp  fully_connected_layer.cpp  input_layer.cpp  l1loss_layer.cpp  pooling_layer.cpp  relu_layer.cpp  reshape_layer.cpp  softmax_loss_layer.cpp  test_layer.cpp
examples/: test.json  test_cfg.json  test_net.json  train.json  train_cfg.json
lib/: CMakeLists.txt  tests.cpp
